--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,9 @@ easyimage/platform/msvc2008/libimage
 easysketch/platform/msvc2008/easysketch
 easysketch/platform/msvc2008/libsketch
 easysketch/platform/msvc2008/easy3d
+easysketch/platform/msvc2008/easyterrain
+easysketch/platform/msvc2008/libterrain
+
 formation/platform/msvc2008/formation
 raiden/platform/msvc2008/raiden
 shootbubble/platform/msvc2008/shootbubble
