[ADDED] simple tri network

--- a/easysketch/platform/msvc2008/projects/easy3d.vcproj
+++ b/easysketch/platform/msvc2008/projects/easy3d.vcproj
@@ -301,6 +301,30 @@
 				</Filter>
 			</Filter>
 		</Filter>
+		<Filter
+			Name="editop"
+			>
+			<File
+				RelativePath="..\..\..\src\easy3d\ControlCameraOP.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easy3d\ControlCameraOP.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="tools"
+			>
+			<File
+				RelativePath="..\..\..\src\easy3d\LogViewer.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easy3d\LogViewer.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\easy3d\easy3d.h"
 			>
