[ADDED] rand for height

--- a/easyterrain/platform/msvc2008/projects/libterrain.vcproj
+++ b/easyterrain/platform/msvc2008/projects/libterrain.vcproj
@@ -185,6 +185,14 @@
 				</File>
 			</Filter>
 		</Filter>
+		<Filter
+			Name="tools"
+			>
+			<File
+				RelativePath="..\..\..\src\libterrain\randtab.h"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
