--- a/easyparticle2d/platform/msvc2008/projects/easyparticle2d.vcproj
+++ b/easyparticle2d/platform/msvc2008/projects/easyparticle2d.vcproj
@@ -3,7 +3,7 @@
 	ProjectType="Visual C++"
 	Version="9.00"
 	Name="easyparticle2d"
-	ProjectGUID="{1464785A-5D84-43E2-886D-2A11D34C024F}"
+	ProjectGUID="{6815C211-C2CF-40A8-B032-CE25E11F6221}"
 	RootNamespace="easyparticle2d"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="196613"
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easycomplex\src"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easybuilder\src;..\..\..\src;..\..\..\..\easycomplex\src;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -122,7 +122,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easycomplex\src"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easybuilder\src;..\..\..\src;..\..\..\..\easycomplex\src;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -181,132 +181,32 @@
 	<References>
 	</References>
 	<Files>
-		<Filter
-			Name="frame"
-			>
-			<File
-				RelativePath="..\..\..\src\easyparticle2d\Context.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easyparticle2d\Context.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easyparticle2d\FileIO.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easyparticle2d\FileIO.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easyparticle2d\Frame.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easyparticle2d\Frame.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easyparticle2d\main.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easyparticle2d\main.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easyparticle2d\Task.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easyparticle2d\Task.h"
-				>
-			</File>
-		</Filter>
-		<Filter
-			Name="dataset"
-			>
-			<File
-				RelativePath="..\..\..\src\easyparticle2d\Color.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easyparticle2d\math.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easyparticle2d\Matrix.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easyparticle2d\Matrix.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easyparticle2d\ParticleSystem.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easyparticle2d\ParticleSystem.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easyparticle2d\Vector.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easyparticle2d\Vector.h"
-				>
-			</File>
-		</Filter>
-		<Filter
-			Name="view"
-			>
-			<Filter
-				Name="stage"
-				>
-				<File
-					RelativePath="..\..\..\src\easyparticle2d\EditOP.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\easyparticle2d\EditOP.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\easyparticle2d\StageCanvas.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\easyparticle2d\StageCanvas.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\easyparticle2d\StagePanel.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\easyparticle2d\StagePanel.h"
-					>
-				</File>
-			</Filter>
-			<Filter
-				Name="toolbar"
-				>
-				<File
-					RelativePath="..\..\..\src\easyparticle2d\ToolbarPanel.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\easyparticle2d\ToolbarPanel.h"
-					>
-				</File>
-			</Filter>
-		</Filter>
 		<File
 			RelativePath="..\..\..\..\easybuilder\platform\msvc2008\ebuilder.rc"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easyparticle2d\Frame.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easyparticle2d\Frame.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easyparticle2d\main.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easyparticle2d\main.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easyparticle2d\Task.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easyparticle2d\Task.h"
 			>
 		</File>
 	</Files>
