[ADDED] auto cut cmpt
Former-commit-id: a5cd598fd63a836a66faeaad76b6dd613605c310

--- a/easyimage/platform/msvc2008/projects/easyimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/easyimage.vcproj
@@ -293,6 +293,26 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="autocut"
+				>
+				<File
+					RelativePath="..\..\..\src\easyimage\AutoCutCMPT.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easyimage\AutoCutCMPT.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easyimage\AutoCutOP.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easyimage\AutoCutOP.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 	</Files>
 	<Globals>
