--- a/easycomplex/platform/msvc2008/projects/config.json
+++ b/easycomplex/platform/msvc2008/projects/config.json
@@ -4,6 +4,7 @@
 	"sprite_capture" : false,			// 编辑对象捕捉
 	"image_edge_clip" : true,			// 图片边缘裁剪
 	"visible_image_edge" : false,		// 显示图片原始边框
+	"linear_filter" : false,			// 采用渐进采样
 	"visible_label_bg" : true,			// 显示文本框
 	"visible_label_text" : true,		// 显示文本
 	"visible_node_name" : false,		// 显示节点名称
