[CHANGED] 重构边界提取，分成raw和fine
Former-commit-id: 2a0884abbbcd70fcd1512d29efdfe69b446cda81

--- a/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -145,14 +145,26 @@
 	<References>
 	</References>
 	<Files>
-		<File
-			RelativePath="..\..\..\src\libimage\BoundaryExtraction.cpp"
+		<Filter
+			Name="outline"
 			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libimage\BoundaryExtraction.h"
-			>
-		</File>
+			<File
+				RelativePath="..\..\..\src\libimage\ExtractOutlineFine.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\ExtractOutlineFine.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\ExtractOutlineRaw.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\ExtractOutlineRaw.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\easyimage.h"
 			>
