--- a/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
+++ b/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
@@ -201,6 +201,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\libcomplex\SearchPathMgr.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcomplex\SearchPathMgr.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libcomplex\Sprite.cpp"
 				>
 			</File>
