[FIXED] SelectionSet没管理智能指针
Former-commit-id: 29fed9ae4cd345f8313ac0a0cb522e297350f1b5

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -769,10 +769,6 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\drag2d\dataset\SelectionSet.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\..\src\drag2d\dataset\TPNode.cpp"
 					>
 				</File>
@@ -780,14 +776,34 @@
 					RelativePath="..\..\..\src\drag2d\dataset\TPNode.h"
 					>
 				</File>
-				<File
-					RelativePath="..\..\..\src\drag2d\dataset\wrap_SelectionSet.cpp"
+				<Filter
+					Name="selection"
 					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\drag2d\dataset\wrap_SelectionSet.h"
-					>
-				</File>
+					<File
+						RelativePath="..\..\..\src\drag2d\dataset\ObjSelectionSet.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\drag2d\dataset\ObjSelectionSet.inl"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\drag2d\dataset\SelectionSet.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\drag2d\dataset\SelectionSet.inl"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\drag2d\dataset\wrap_SelectionSet.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\drag2d\dataset\wrap_SelectionSet.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="scene"
