[ADDED] easyshape导入图片时自动加上outline数据
Former-commit-id: 0392b1f22b1bf63b95b119a7ddd3046d13f2b69e

--- a/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -166,6 +166,10 @@
 			</File>
 		</Filter>
 		<File
+			RelativePath="..\..\..\src\libimage\config.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\easyimage.h"
 			>
 		</File>
