[CHANGED] 替换b2render
Former-commit-id: 8fa54891e7f547050e3cc11233dfb5df09df53ef

--- a/easyphysics/platform/msvc2008/projects/easyphysics.vcproj
+++ b/easyphysics/platform/msvc2008/projects/easyphysics.vcproj
@@ -321,6 +321,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\Box2DRender.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\Box2DRender.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\PhysicsPanelImpl.cpp"
 				>
 			</File>
