--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1461,6 +1461,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\common\SpecialConfig.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\common\SpecialConfig.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\common\TodoConfig.h"
 					>
 				</File>
