--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\src\easydb;..\..\..\src\easydb_cl;..\..\..\src\glfw;..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;..\..\..\..\easycomplex\src;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easybuilder\src;..\..\..\..\easyimage\src;..\..\..\..\easyparticle2d\src"
+				AdditionalIncludeDirectories="..\..\..\src\easydb;..\..\..\src\easydb_cl;..\..\..\src\glfw;..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;..\..\..\..\easycomplex\src;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easybuilder\src;..\..\..\..\easyimage\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyshape\src"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -123,7 +123,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\src\easydb;..\..\..\src\easydb_cl;..\..\..\src\glfw;..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;..\..\..\..\easycomplex\src;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easybuilder\src;..\..\..\..\easyimage\src;..\..\..\..\easyparticle2d\src"
+				AdditionalIncludeDirectories="..\..\..\src\easydb;..\..\..\src\easydb_cl;..\..\..\src\glfw;..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;..\..\..\..\easycomplex\src;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easybuilder\src;..\..\..\..\easyimage\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyshape\src"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				BasicRuntimeChecks="0"
 				RuntimeLibrary="2"
@@ -262,142 +262,174 @@
 		<Filter
 			Name="commands"
 			>
-			<File
-				RelativePath="..\..\..\src\easydb\AddFrameSprite.cpp"
+			<Filter
+				Name="pack"
 				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\AddFrameSprite.h"
+				<File
+					RelativePath="..\..\..\src\easydb\PackParticle2D.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\PackParticle2D.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\PackParticle3D.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\PackParticle3D.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="image"
 				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\ChangeJsonFile.cpp"
+				<File
+					RelativePath="..\..\..\src\easydb_cl\OutlineImage.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\OutlineImage.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\OutlineToPolygon.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\OutlineToPolygon.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\Snapshoot.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\Snapshoot.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\TransToGif.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\TransToGif.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\TrimImage.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\TrimImage.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="json"
 				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\ChangeJsonFile.h"
+				<File
+					RelativePath="..\..\..\src\easydb\ChangeJsonFile.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\ChangeJsonFile.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\ChangeTPJsonFile.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\ChangeTPJsonFile.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\FormatJsonFile.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\FormatJsonFile.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\ScaleJson.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\ScaleJson.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="preprocess"
 				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\ChangeTPJsonFile.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\ChangeTPJsonFile.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\FormatJsonFile.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\FormatJsonFile.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\FormatTIDString.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\FormatTIDString.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\PackParticle2D.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\PackParticle2D.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\PackParticle3D.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\PackParticle3D.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\ReverseAnimation.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\ReverseAnimation.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\ScaleJson.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\ScaleJson.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\ScaleOverall.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\ScaleOverall.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\SetNameFromFile.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\SetNameFromFile.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\Snapshoot.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\Snapshoot.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\TransToGif.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\TransToGif.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\TrimImage.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\TrimImage.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\UniqueImage.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\UniqueImage.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\VerifyImage.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\VerifyImage.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\VerifyJson.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easydb\VerifyJson.h"
-				>
-			</File>
+				<File
+					RelativePath="..\..\..\src\easydb\AddFrameSprite.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\AddFrameSprite.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\FormatTIDString.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\FormatTIDString.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\ReverseAnimation.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\ReverseAnimation.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\ScaleOverall.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\ScaleOverall.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\SetNameFromFile.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\SetNameFromFile.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\UniqueImage.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\UniqueImage.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\VerifyImage.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\VerifyImage.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\VerifyJson.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb\VerifyJson.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<File
 			RelativePath="..\..\..\src\easydb_cl\main.cpp"
