[FIXED] 关掉complex的auto save window
Former-commit-id: b8891caf6af7cb17d3b24dc91d46fd11dbfba348

--- a/easycomplex/platform/msvc2008/projects/complex_config.json
+++ b/easycomplex/platform/msvc2008/projects/complex_config.json
@@ -2,10 +2,10 @@
 {
 	"window" : 
 	{
-		"width" : 800,
 		"height" : 600,
 		"left" : 100,
-		"top" : 100
+		"top" : 100,
+		"width" : 800
 	},
-	"window_auto_set" : true
+	"window_auto_set" : false
 }
