[ADDED] 修复错误的add color字段
Former-commit-id: 8b0019bc86613e03c4ee407cb31a2b87cdddb0f9

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -346,6 +346,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\easydb_cl\FixSpriteColor.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\FixSpriteColor.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\easydb\FormatJsonFile.cpp"
 					>
 				</File>
