[ADDED] 计算最小包围盒
Former-commit-id: 8e83fe30635a6510cec5a972e1f94795432cd2ed

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2022,6 +2022,14 @@
 			Name="algorithms"
 			>
 			<File
+				RelativePath="..\..\..\src\drag2d\algorithms\ConvexHull.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\drag2d\algorithms\ConvexHull.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\drag2d\algorithms\CosineSmooth.cpp"
 				>
 			</File>
@@ -2043,6 +2051,14 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\drag2d\algorithms\DouglasPeucker.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\drag2d\algorithms\MinBoundingBox.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\drag2d\algorithms\MinBoundingBox.h"
 				>
 			</File>
 			<File
