--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -302,6 +302,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\easydb_cl\RotateTrimImage.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\RotateTrimImage.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\easydb\Snapshoot.cpp"
 					>
 				</File>
